# Heart-Attack-Risk-Prediction

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: brfss_2023_column_map.yaml  raw_to_clean_column_map.json
dags/: heart_attack_full_pipeline.py
data/derived/: categorical_feature_pairwise_pvals.csv  categorical_vs_target_summary.csv  category_size_summary.csv  numeric_feature_correlation_phase3.csv  phase4_categorical_chi2_results.csv  phase4_categorical_feature_pairwise_pvals.csv  phase4_categorical_redundancy_and_rarity.csv  phase4_category_size_summary.csv  phase4_numerical_ttest_results.csv  phase4_rare_category_flags.csv  stardizedDF.csv
data/processed/: feature_list.json
mlflow_pipeline/: check_signature.ipynb  register_and_promote.py  serve_production.sh  start_mlflow_server.sh
models/: lgbm.joblib  model.bst  xgb.joblib  xgb_baseline.joblib  xgb_baseline_33.joblib  xgb_top25_shap.bst  xgb_top25_shap.joblib  xgb_tuned_optuna.joblib  xgb_with_engineering.joblib  xgb_with_engineering_v2.joblib
notebooks/: 01_eda.ipynb  02A_sagemaker_train_model.ipynb  02B_sagemaker_deploy_model.ipynb  02_train_model.ipynb  03_mlflow_tracking.ipynb  04_create_latency_alarm.ipynb  05_hpo_analysis.ipynb
src/brfss_risk/pipeline/: deploy_to_sagemaker.py  deployment.py  inference.py
src/brfss_risk/utils/: __init__.py  data_prep.py  imbalance_strategy.py  logger.py
tests/: schema_check.py
